--- a/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Wasm/Defaults.razor
+++ b/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Wasm/Defaults.razor
@@ -13,6 +13,7 @@
     public static RenderFragment Links => @<div>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" media="all" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.3.2/css/flag-icons.min.css" />
         <link rel="stylesheet" href="_content/Radzen.Blazor/css/standard-base.css" />
         <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css" />
         <link rel="stylesheet" href="_content/Radzen.Blazor/css/dark-base.css" />
