--- a/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Wasm/Routes.razor
+++ b/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Wasm/Routes.razor
@@ -5,6 +5,7 @@
 
 @code {
     public static List<Assembly> AdditionalAssemblies = [
-        typeof(WSBInvestmentPredictor.Prediction.DI).Assembly
+        typeof(WSBInvestmentPredictor.Prediction.DI).Assembly,
+        typeof(WSBInvestmentPredictor.Expenses.DI).Assembly
         ];
 }
